1-system/3-litellm/litellm.virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: litellm-virtual-service
spec:
  gateways:
    - istio-system/ezaf-gateway
  hosts:
    - litellm.ingress.pcai0201.fr2.hpecolo.net
  http:
    - match:
        - uri:
            prefix: /
      rewrite:
        uri: /
      route:
        - destination:
            host: litellm.unique.svc.cluster.local
            port:
              number: 4000
